[package]
name = "bext"
version = "0.1.0"
edition = "2024"

[lib]
name = "bext"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
glob = "0.3.3"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml_edit = { version = "0.25.11", features = ["serde"] }
walkdir = "2.5.0"
zip = { version = "8.6.0", features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"
